Fix padding on mobile

--- a/resources/assets/sass/site/site.scss
+++ b/resources/assets/sass/site/site.scss
@@ -45,7 +45,6 @@ a {
 	@media (max-width: $sidebar-breakpoint) {
 		margin: 0 auto;
 		margin-top: 35px;
-		padding-right: 10px;
 		width: 100%;
 		max-width: 600px;
 	}
